feat: implement high-performance off-heap Robin Hood hash index with Unsafe optimizations and technical documentation